--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,10 @@ footer {
   background-color: rgba(247, 247, 247, 0.438);
   
 }
+#pro-count{
+  background-image: url("../images/project-counter.jpg");
+  opacity: 0.5;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
